--- a/Index1.html
+++ b/Index1.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="icon" href="Image/logo_letra1.png" type="image/x-icon">
-        <title>Titulo</title> 
+        <title>Title</title> 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet"> 
@@ -24,15 +24,15 @@
                     </div> 
                     <nav>
                         <ul>
-                            <li><a href="">seção</a></li> 
-                            <li><a href="">seção</a></li> 
-                            <li><a href="">seção</a></li>
+                            <li><a href="">section</a></li> 
+                            <li><a href="">section</a></li> 
+                            <li><a href="">section</a></li>
                         </ul>
                     </nav>
                 </div> 
 
                 <div class="right-menu">  
-                    <a href="" class="carrinho"><img src="Imagem carrinho" alt="carro"></a>
+                    <a href="" class="carrinho"><img src="shopping cart" alt="carro"></a>
 
                 </div>
             </div> 
@@ -47,7 +47,7 @@
         <section class="products">  
             <div class="container"> 
                 <div class="product"> 
-                    <img src="Imagem Produto"> 
+                    <img src="product"> 
                     <h4>Informação</h4> 
                     <h5>Informação</h5> 
                 </div>  
@@ -81,7 +81,7 @@
         <footer>
             <div id="footer_content"> 
                 <div id="footer_contacts"> 
-                    <img src="Imagem logo" alt=""> 
+                    <img src="Logo image" alt=""> 
                     <p>Informação</p> 
                     <div id="footer_social_media"> 
                         <a href="#" class="footer-link" id="instagram"> 
@@ -102,28 +102,28 @@
                     <h3>Institucional</h3>
                 </li> 
                 <li>
-                    <a href="#" class="footer-link">Contato</a>
+                    <a href="#" class="footer-link">Contact</a>
                 </li> 
                 <li>
-                    <a href="#" class="footer-link">Contato</a>
+                    <a href="#" class="footer-link">Contact</a>
                 </li> 
                 <li>
-                    <a href="#" class="footer-link">Contato</a>
+                    <a href="#" class="footer-link">Contact</a>
                 </li>
             </ul> 
 
             <ul class="footer-list"> 
                 <li>
-                    <h3>Mais Informações</h3>
+                    <h3>More information</h3>
                 </li> 
                 <li>
-                    <a href="#" class="footer-link">Informações</a>
+                    <a href="#" class="footer-link">Information</a>
                 </li> 
                 <li>
-                    <a href="#" class="footer-link">Informações</a>
+                    <a href="#" class="footer-link">Informartion</a>
                 </li> 
                 <li>
-                    <a href="#" class="footer-link">Informações</a>
+                    <a href="#" class="footer-link">Information</a>
                 </li>
             </ul> 
 
